[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/IntermissionScreens/TitlePage.gd" type="Script" id=1]
[ext_resource path="res://src/UI/LanguageButtonGroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://src/UI/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/ui/buttons/english_unpressed.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/buttons/czech_unpressed.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/buttons/czech_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/buttons/english_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/buttons/czech_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/buttons/english_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/title_logo_hollow.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/title_logo.png" type="Texture" id=11]

[sub_resource type="Animation" id=2]
resource_name = "FADE_OUT"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOutRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeOutRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "INTRO"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameLogoHollow:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 245.0, 50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeOutRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 5.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameLogoHollow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameLogo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/Footing/MadeByLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_activate_buttons"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer/Buttons:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VBoxContainer/Footing/LanguageButtons:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOutRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeOutRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameLogoHollow:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 245.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameLogo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/Buttons:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/Footing/MadeByLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer/Footing/LanguageButtons:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="TitlePage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -104.0

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 320.0
margin_bottom = 25.0
custom_constants/separation = 6

[node name="NewGameButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 113.0
margin_right = 207.0
margin_bottom = 25.0
focus_mode = 0
size_flags_horizontal = 4
theme = ExtResource( 3 )
disabled = true
enabled_focus_mode = 0
text = "{NewGameTitle}"

[node name="HowToButton" type="Button" parent="VBoxContainer/Buttons"]
visible = false
margin_left = 109.0
margin_top = 31.0
margin_right = 211.0
margin_bottom = 56.0
focus_mode = 0
size_flags_horizontal = 4
theme = ExtResource( 3 )
disabled = true
enabled_focus_mode = 0
text = "{HowToPlayTitle}"

[node name="Footing" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 320.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="LanguageButtons" type="HBoxContainer" parent="VBoxContainer/Footing"]
visible = false
margin_top = 33.0
margin_right = 320.0
margin_bottom = 51.0
alignment = 1

[node name="ButtonENG" type="TextureButton" parent="VBoxContainer/Footing/LanguageButtons"]
margin_left = 132.0
margin_right = 158.0
margin_bottom = 18.0
focus_mode = 0
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = ExtResource( 2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )

[node name="ButtonCZE" type="TextureButton" parent="VBoxContainer/Footing/LanguageButtons"]
margin_left = 162.0
margin_right = 188.0
margin_bottom = 18.0
focus_mode = 0
disabled = true
toggle_mode = true
pressed = true
enabled_focus_mode = 0
group = ExtResource( 2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )

[node name="MadeByLabel" type="Label" parent="VBoxContainer/Footing"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 55.0
margin_right = 320.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 20 )
theme = ExtResource( 3 )
text = "2022 Josef Å ustek"
align = 1

[node name="GameLogo" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 89.0
size_flags_vertical = 3
texture = ExtResource( 11 )
stretch_mode = 4

[node name="GameLogoHollow" type="TextureRect" parent="."]
anchor_right = 1.0
margin_top = 245.0
margin_bottom = 89.0
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE_OUT = SubResource( 2 )
anims/INTRO = SubResource( 3 )
anims/RESET = SubResource( 1 )

[node name="FadeOutRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BubbleTimer" type="Timer" parent="."]

[connection signal="pressed" from="VBoxContainer/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/HowToButton" to="." method="_on_HowToButton_pressed"]
[connection signal="toggled" from="VBoxContainer/Footing/LanguageButtons/ButtonENG" to="." method="_on_ButtonENG_toggled"]
[connection signal="toggled" from="VBoxContainer/Footing/LanguageButtons/ButtonCZE" to="." method="_on_ButtonCZE_toggled"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BubbleTimer" to="." method="_on_BubbleTimer_timeout"]
